trunk/Archive2/00/1f1a997f0b499d/output
main.cpp: In instantiation of 'auto wrap(F, Args&& ...) [with F = void (*)(int, char, double); Args = {int, char}]':
main.cpp:22:20:   required from here
main.cpp:6:44: error: too few arguments to function
     return func(std::forward<Args>(args)...);
                                            ^
